# mqtt-rest

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/: tag_n_push.sh
.github/workflows/: build.yml  ci.yml  publish.yml  status.yml  test.yml
mqtt_rest/: __init__.py  configs.py  db.py  device.py  mqtt.py  run.py  server.py  utils.py
mqtt_rest/plugins/: __init__.py  helper.py  report_manager.py  routes.py  simple_plugin.py  template_engine.py
mqtt_rest/plugins/_helper_commands/: install.sh  multi_job.sh  single_job.sh
mqtt_rest/plugins/sensors/: parsers.py  routes.py
mqtt_rest/plugins/simple_plugin_templates/: multi_job.sh  report.txt  single_job.sh
mqtt_rest/plugins/simple_plugins/: __init__.py  sensors.py  smartwrt.py
mqtt_rest/plugins/smartwrt/: parsers.py  routes.py
tests/: test_device.py
