[tool.poetry]
name = "mqtt-rest"
version = "0.8.1"
description = "A REST API for MQTT Client Management"
packages = [
    {include = "mqtt_rest", from = "."},
]
authors = [
    "Rahul Sharma <rahulsrma26@gmail.com>",
]
maintainers = [
    "Rahul Sharma <rahulsrma26@gmail.com>",
]
license = "MIT"
repository = "https://github.com/rahulsrma26/mqtt-rest"
readme = "README.md"
keywords = [
    "MQTT",
    "REST",
    "API",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Framework :: FastAPI",
    "Topic :: Home Automation",
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
paho-mqtt = "^2.1.0"
toml = "^0.10.2"
jinja2 = "^3.1.4"
sqlmodel = "^0.0.22"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.8"
pytest = "^8.3.3"
pytest-mock = "^3.14.0"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mqtt-rest-server = "mqtt_rest.run:main"

[tool.ruff]
line-length = 100
lint.select = ["I"]

[tool.ruff.lint.isort]
order-by-type = true
relative-imports-order = "closest-to-furthest"
extra-standard-library = ["typing"]
